force-app/main/default/objects/Charge_Line__c/Charge_Line__c.object-meta.xml
<CustomObject>
    <description>Per component charge amount on a utility bill (FSD 5.10.3). Components vary by utility and appear irregularly, for example energy, pass through and taxes on electricity, and surface water, wastewater, stormwater, grease trap and fire on water.</description>
    <label>Charge Line</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Charge Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <!--
      Justified as a custom object because fixed columns on the bill cannot absorb charge
      components that appear irregularly and differ per utility. Master detail to
      Utility_Bill__c is required so that Utility_Bill__c.Total_Charges_Amount__c can be a
      roll up summary; a lookup would push that total into Apex.
      enableSearch is false because an autonumber line item is not a useful global search
      result; charge lines are reached through their parent bill.
    -->
</CustomObject>