force-app/main/default/objects/Charge_Line__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>Which component of the bill this line represents. FSD 5.10.3 notes that components vary by utility and appear irregularly, which is the reason charges are lines rather than fixed columns. Deliberately UNRESTRICTED, see the comment below.</description>
    <inlineHelpText>Pick the closest match to the wording on the invoice. New component names can be entered when a provider introduces one, so an unfamiliar charge does not have to be forced into Other.</inlineHelpText>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Pass-Through</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Surface Water</fullName>
            </value>
            <value>
                <fullName>Wastewater</fullName>
            </value>
            <value>
                <fullName>Stormwater</fullName>
            </value>
            <value>
                <fullName>Grease Trap</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Base Charge</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <!--
      UNRESTRICTED, and that is a deliberate exception to the project default of restricted.

      Restricted picklists on this project ARE enforced at DML, measured four separate
      times. FSD 5.10.3 says charge components appear irregularly, so a monthly bill import
      carrying a component name that is not on the list would HARD FAIL the row under a
      restricted picklist. The failure mode of unrestricted is a typo in a report grouping;
      the failure mode of restricted is a rejected bill. The first is recoverable.

      The ten seeded values are taken from the FSD 5.10.2 examples only: energy, pass
      through and taxes for electricity, and surface water, wastewater, stormwater, grease
      trap and fire for water, plus Base Charge and Other.
    -->
</CustomField>